--- a/public/app/index.html
+++ b/public/app/index.html
@@ -14,9 +14,11 @@
 
         <link href="css/main.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="../bower_components/angular-chart.js/dist/angular-chart.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        
+
+
     </head>
-    <body class="home">
+    <body class="homepage">
 
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -28,7 +30,11 @@
         <footer class="colophon">
         </footer>
 
-        <script src="../bower_components/jquery/dist/jquery.js"></script>    
+        <script src="../bower_components/jquery/dist/jquery.js"></script> 
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="js/plugins/curtain.js"></script>   
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-resource/angular-resource.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
@@ -41,6 +47,7 @@
         <script src="../app/app.js"></script>
         <script src="../app/controllers/HomeController.js"></script>
         <script src="../app/controllers/LifeController.js"></script>
+        <script src="../app/directives/afterRender.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
