--- a/public/app/life.html
+++ b/public/app/life.html
@@ -44,7 +44,7 @@
                         Think for a moment… have you achieved everything you want to?
                         You may of already lived {{ user.livesDayPercentage }}% of your lifetime.
                         <div>
-                            <canvas id="life-pie" width="250" height="250"></canvas>
+                            <canvas id="life-pie" vl-pie-chart="user.livesDayPercentage" day="user.livesDayPercentage" width="250" height="250"></canvas>
                         </div>
                         <div>
                             Time is ticking, here is how long you have until 100%:
