_Init vagrant _Add .vagrant to gitignore _Uncomment navigation in life.html

--- a/public/app/life.html
+++ b/public/app/life.html
@@ -2,7 +2,8 @@
     <!--[if lt IE 8]>
                             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-   <!--  <nav class="menu primary">
+    <div after-render="setupCurtains"></div>
+    <nav class="menu primary">
         <ul>
             <li><a class="curtain-links ir" href="#intro">1</a></li>
             <li><a class="curtain-links ir"href="#bd">2</a></li>
@@ -10,8 +11,7 @@
             <li><a class="curtain-links ir" href="#section4">4</a></li>
             <li><a class="curtain-links ir" href="#colophon">5</a></li>
         </ul>
-    </nav> -->
-    <div after-render="setupCurtains"></div>
+    </nav>
     <ol class="curtains">
         <li id="intro" class="section cover">
             <header class="band" data-fade="550" data-slow-scroll="3">
