Add slideToggle directive

--- a/public/app/user.html
+++ b/public/app/user.html
@@ -11,7 +11,7 @@
         </a>
     </header>
     <nav class="app-info-wrapper">
-        <a href="#" title="About this App" class="app-info">
+        <a href="" title="About this App" class="app-info">
         <i class="fa fa-info"></i>
         </a>
     </nav>
