--- a/public/app/index.html
+++ b/public/app/index.html
@@ -14,8 +14,6 @@
 
         <link href="css/main.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="../bower_components/angular-chart.js/dist/angular-chart.css">
-        
-
 
     </head>
     <body class="homepage">
@@ -31,10 +29,9 @@
         </footer>
 
         <script src="../bower_components/jquery/dist/jquery.js"></script> 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="js/plugins/curtain.js"></script>   
+        <script src="js/plugins/jquery.validate.min.js"></script> 
+        <script src="js/plugins/curtain.js"></script>
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-resource/angular-resource.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
