Integrate directive to user.html

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -47,6 +47,7 @@
         <script src="../app/controllers/LifeController.js"></script>
         <script src="../app/directives/afterRender.js"></script>
         <script src="../app/directives/vlPieChart.js"></script>
+        <script src="../app/directives/vlSlideToggle.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
