--- a/public/app/user.html
+++ b/public/app/user.html
@@ -1,17 +1,17 @@
 <div class="main" role="main">
-    <header class="app-intro">
+    <header class="app-intro" id="app-header">
         <div class="centre">
             <p>This application is created by PRH as part of a new project called "iVisualife".</p>
             <p>The purpose of this application is to provide the user with a general understanding of life, death and the time in between. I hadn't ever thought much about how quickly time passes and just how much past each and every one of us has.</p>
             <p>By entering your data into the form, you'll be able to see some simple statistics about your time on Earth as well as predictions such as when you'll die, which are based on various data feeds.</p>
             <br>
         </div>
-        <a href="#" class="close-btn">
+        <a href="" class="close-btn" data-slide-toggle="#app-header" data-slide-toggle-duration="100">
         <i class="fa fa-times"></i>
         </a>
     </header>
     <nav class="app-info-wrapper">
-        <a href="" title="About this App" class="app-info">
+        <a href="" title="About this App" class="app-info" data-slide-toggle="#app-header" data-slide-toggle-duration="100">
         <i class="fa fa-info"></i>
         </a>
     </nav>
