--- a/public/app/index.html
+++ b/public/app/index.html
@@ -29,8 +29,9 @@
         </footer>
 
         <script src="../bower_components/jquery/dist/jquery.js"></script> 
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="js/plugins/jquery.validate.min.js"></script> 
         <script src="js/plugins/curtain.js"></script>
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-resource/angular-resource.js"></script>
@@ -48,7 +49,6 @@
         <script src="../app/directives/afterRender.js"></script>
         <script src="../app/directives/vlPieChart.js"></script>
         <script src="../app/directives/vlSlideToggle.js"></script>
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
