- Implement highstock chart for population ranking

--- a/public/app/life.html
+++ b/public/app/life.html
@@ -34,10 +34,12 @@
                         <!-- <br> -->
                          of <i>{{ worldTotalPopulation }}</i>  human beings on our planet.
                         <img src="img/globe.png" alt="">
-                        <canvas id="line" class="chart chart-line" data="data"
+                        <!-- <canvas id="line" class="chart chart-line" data="data"
                           labels="labels" legend="true" series="series"
                           click="onClick">
-                        </canvas>
+                        </canvas> -->
+
+                        <div class="hc-PopulationRankingChart" items="populationSummary" user="user"></div>
                     </section>
                 </li>
                 <li id="" class="section">
