--- a/public/app/index.html
+++ b/public/app/index.html
@@ -14,7 +14,7 @@
 
         <link href="css/main.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="../bower_components/angular-chart.js/dist/angular-chart.css">
-        
+
 
 
     </head>
@@ -30,17 +30,23 @@
         <footer class="colophon">
         </footer>
 
-        <script src="../bower_components/jquery/dist/jquery.js"></script> 
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-        <script src="js/plugins/curtain.js"></script>   
+        <script src="js/plugins/curtain.js"></script>
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-resource/angular-resource.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
         <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="../bower_components/Chart.js/Chart.js"></script>
         <script src="../bower_components/angular-chart.js/dist/angular-chart.js"></script>
+        <script src="../bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+        <!-- <script src="../bower_components/highcharts-release/highcharts.js"></script>
+        <script src="../bower_components/highcharts-release/highcharts.src.js"></script>
+        <script src="../bower_components/highcharts-release/highcharts-more.js"></script> -->
+        <script src="http://code.highcharts.com/stock/highstock.js"></script>
+        <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
         <script src="../bower_components/mathjs/dist/math.js"></script>
         <script src="../bower_components/moment/moment.js"></script>
         <script src="../bower_components/mathjs/dist/math.js"></script>
