Add the calendar

--- a/public/app/life.html
+++ b/public/app/life.html
@@ -1,6 +1,6 @@
 <div class="result-page">
     <!--[if lt IE 8]>
-                                    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+                                        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div after-render="setupCurtains"></div>
     <nav class="menu primary">
@@ -45,14 +45,15 @@
                             <div class="hc-PopulationRankingChart" items="populationSummary" user="user"></div>
                             <img src="img/globe.png" alt="">
                         </article>
-
                     </section>
                 </li>
                 <li id="" class="section">
                     <section class="born centre">
                         <h3>
-                        Day {{ user.livesDay }} of your life
+                        You're 24 years old
                         </h3>
+                        Today's the {{ user.livesDay }} Day of your life <sup>[2]</sup>
+                        <sup>[]</sup>
                         Think for a moment… have you achieved everything you want to?
                         You may of already lived {{ user.livesDayPercentage }}% of your lifetime.
                         <div>
