--- a/public/app/index.html
+++ b/public/app/index.html
@@ -49,12 +49,14 @@
         <script src="../bower_components/moment/moment.js"></script>
         <script src="../bower_components/mathjs/dist/math.js"></script>
         <script src="../bower_components/lodash/lodash.js"></script>
+        <script src="../bower_components/async/dist/async.js"></script>
         <script src="../app/app.js"></script>
         <script src="../app/controllers/HomeController.js"></script>
         <script src="../app/controllers/LifeController.js"></script>
         <script src="../app/directives/afterRender.js"></script>
         <script src="../app/directives/vlPieChart.js"></script>
         <script src="../app/directives/vlSlideToggle.js"></script>
+
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
